--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "Classes/Vendor/yajl-objc"]
 	path = Classes/Vendor/yajl-objc
-	url = http://github.com/gabriel/yajl-objc.git
+	url = https://github.com/danyowdee/yajl-objc.git
 [submodule "Classes/Vendor/json-framework"]
 	path = Classes/Vendor/json-framework
 	url = http://github.com/stig/json-framework.git
 [submodule "Classes/Vendor/JSONKit"]
 	path = Classes/Vendor/JSONKit
-	url = http://github.com/johnezang/JSONKit.git
+	url = https://github.com/danyowdee/JSONKit.git
 [submodule "Classes/Vendor/TouchJSON"]
 	path = Classes/Vendor/TouchJSON
 	url = https://github.com/TouchCode/TouchJSON.git 
